@@ -16,8 +16,11 @@ use Test::More tests => 2;
 
 # =begin testing prune 2
 {
-my $document = PPI::Document->new( \<<'END_PERL' );
-#!/usr/bin/perl
+# Avoids a bug in old Perls relating to the detection of scripts
+# Known to occur in ActivePerl 5.6.1 and at least one 5.6.2 install.
+my $hashbang = reverse 'lrep/nib/rsu/!#'; 
+my $document = PPI::Document->new( \<<"END_PERL" );
+$hashbang
 
 use strict;
 
@@ -32,6 +35,7 @@ print "\n";
 
 exit;
 END_PERL
+
 isa_ok( $document, 'PPI::Document' );
 ok( defined($document->prune ('PPI::Statement::Sub')),
 	'Pruned multiple subs ok' );
