@@ -11,6 +11,8 @@ Revision history for Perl extension PPI
 	- Fixed #21571 symbol() returns just sigil with adjacent braces
 	- Fixed #21575 variables() chokes on list with whitespace
 	- Fixed #20480 (Misparse of some floating-point numbers.)
+	- Fixed #19999: Make test fails (undeclared global variable $document) under Perl 5.6.2
+	  (or at least, I think I have. This needs double-checking on Perl 5.6.2)
 
 1.117   Sat 02 Sep 2006
 	Summary:
